--- a/Shiny/notes.html
+++ b/Shiny/notes.html
@@ -6,58 +6,65 @@
   <title>Week 2: Turning Analysis into an R Shiny Dashboard</title>
   <style>
     :root{
-      --bg:#0b1020;
-      --panel:#121a33;
-      --panel2:#0f1630;
-      --text:#e8ecff;
-      --muted:#b9c2ff;
-      --accent:#7aa2ff;
-      --good:#7dffb2;
-      --warn:#ffd37a;
-      --bad:#ff7a7a;
-      --border:rgba(255,255,255,0.12);
-      --code:#0a0f1f;
+      --bg:#ffffff;
+      --panel:#ffffff;
+      --panel2:#ffffff;
+      --text:#111827;
+      --muted:#6b7280;
+      --accent:#2563eb;
+      --good:#16a34a;
+      --warn:#d97706;
+      --bad:#dc2626;
+      --border:#e5e7eb;
+      --code:#0b1020;
       --mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
       --sans: ui-sans-serif, system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
     }
+
+    *{ box-sizing:border-box; }
+
     body{
       margin:0;
       font-family:var(--sans);
-      background: radial-gradient(1200px 700px at 20% 0%, rgba(122,162,255,0.18), transparent 60%),
-                  radial-gradient(800px 600px at 80% 10%, rgba(125,255,178,0.10), transparent 55%),
-                  var(--bg);
+      background: var(--bg);
       color:var(--text);
       line-height:1.55;
     }
+
     header{
-      padding:40px 18px 18px;
-      max-width:1050px;
+      width: min(1100px, calc(100vw - 36px));
       margin:0 auto;
+      padding:40px 0 18px;
     }
+
     h1{
       margin:0 0 10px;
       font-size: clamp(26px, 3vw, 38px);
       letter-spacing:0.2px;
     }
+
     .subtitle{
       color:var(--muted);
       max-width: 70ch;
       font-size: 16px;
     }
+
     .wrap{
-      max-width:1050px;
+      width: min(1100px, calc(100vw - 36px));
       margin:0 auto;
-      padding:0 18px 60px;
+      padding:0 0 60px;
     }
+
     .row{
       display:grid;
       grid-template-columns: 1fr;
-      gap:14px;
+      gap:18px;
     }
+
     @media(min-width: 950px){
       .row{
-        grid-template-columns: 320px 1fr;
-        gap:18px;
+        grid-template-columns: 340px 1fr;
+        gap:22px;
       }
       .sticky{
         position:sticky;
@@ -65,27 +72,32 @@
         align-self:start;
       }
     }
+
     .card{
-      background: linear-gradient(180deg, rgba(255,255,255,0.05), rgba(255,255,255,0.02));
+      background: var(--panel);
       border:1px solid var(--border);
-      border-radius:16px;
-      padding:16px;
-      box-shadow: 0 12px 35px rgba(0,0,0,0.35);
+      border-radius:14px;
+      padding:18px;
+      box-shadow: 0 6px 18px rgba(0,0,0,0.06);
     }
+
     .toc a{
       display:block;
       color:var(--muted);
       text-decoration:none;
-      padding:7px 8px;
+      padding:7px 10px;
       border-radius:10px;
       border:1px solid transparent;
       margin:2px 0;
+      transition: background .12s ease, border-color .12s ease, color .12s ease;
     }
+
     .toc a:hover{
       color:var(--text);
-      border-color: rgba(122,162,255,0.35);
-      background: rgba(122,162,255,0.08);
+      border-color: rgba(37,99,235,0.22);
+      background: rgba(37,99,235,0.06);
     }
+
     .tag{
       display:inline-block;
       font-size:12px;
@@ -95,28 +107,44 @@
       color:var(--muted);
       margin-right:6px;
       margin-bottom:6px;
-      background: rgba(255,255,255,0.03);
+      background: rgba(17,24,39,0.03);
     }
+
     h2{
       margin: 0 0 10px;
       font-size: 22px;
     }
+
     h3{
       margin: 18px 0 8px;
       font-size: 18px;
     }
+
     p{ margin: 10px 0; }
+
     ul{ margin: 8px 0 12px 22px; }
+
     li{ margin: 6px 0; }
+
     .callout{
-      border-left: 4px solid var(--accent);
+      border-left: 4px solid rgba(37,99,235,0.45);
       padding: 10px 12px;
-      background: rgba(122,162,255,0.08);
+      background: rgba(37,99,235,0.06);
       border-radius: 12px;
       margin: 12px 0;
+      color: var(--muted);
     }
-    .callout.good{ border-left-color: var(--good); background: rgba(125,255,178,0.07); }
-    .callout.warn{ border-left-color: var(--warn); background: rgba(255,211,122,0.07); }
+
+    .callout.good{
+      border-left-color: rgba(22,163,74,0.55);
+      background: rgba(22,163,74,0.06);
+    }
+
+    .callout.warn{
+      border-left-color: rgba(217,119,6,0.55);
+      background: rgba(217,119,6,0.06);
+    }
+
     .code{
       background: var(--code);
       border:1px solid rgba(255,255,255,0.10);
@@ -127,31 +155,38 @@
       font-size: 13px;
       line-height: 1.45;
       margin: 10px 0 14px;
+      color:#e7eef7;
     }
+
     .hr{
       height:1px;
-      background: rgba(255,255,255,0.10);
+      background: var(--border);
       margin: 18px 0;
     }
+
     .kpi-grid{
       display:grid;
       grid-template-columns: 1fr;
       gap:10px;
       margin-top: 10px;
     }
+
     @media(min-width: 800px){
       .kpi-grid{
         grid-template-columns: repeat(3, 1fr);
       }
     }
+
     .kpi{
-      border:1px solid rgba(255,255,255,0.12);
+      border:1px solid var(--border);
       border-radius:14px;
       padding:12px;
-      background: rgba(255,255,255,0.03);
+      background: rgba(17,24,39,0.02);
     }
+
     .kpi .label{ color: var(--muted); font-size: 12px; }
     .kpi .value{ font-size: 22px; margin-top: 4px; }
+
     .footer{
       color: var(--muted);
       font-size: 13px;
@@ -325,7 +360,7 @@ Server: read data + filter data + build plots/tables + send to UI</pre></div>
           <h3>Stage 1: The smallest working app</h3>
           <h3>NEED TO ADD MORE NOTES HERE TO EXPLAIN THAT RUNNING TIES TOGETHER THE SERVER AND UI ELEMENTS AND GENERATES AN OUTPUT PANEL</h3>
           <h3>SAVE INTRODUCING ONLINE HOSTING UNTIL MUCH LATER, STUDENTS WILL NEED FREE ACCOUNTS, THEY HAVE LIMITED RUNTIMES ON FREE ACCOUNT.</h3>
-          
+
           <div class="code"><pre>install.packages("shiny")
 
 library(shiny)
