adding to the realism

--- a/index.html
+++ b/index.html
@@ -373,6 +373,14 @@
         ]
       },
       {
+        section: "Absolute Basic Guides",
+        locked: false,
+        items: [
+          { title:"Intro to R Studio", desc:"Help, I have never seen R Studio before!", href:"daily/monday.html", icon:"cleaning" },
+          { title:"Light intro to data cleaning", desc:"Help get me started with data cleainng", href:"daily/tuesday.html", icon:"cleaning" }
+        ]
+      },
+      {
         section: "Getting started",
         locked: false,
         items: [
@@ -417,12 +425,17 @@
         items: [
           { title:"Office for Health Improvement and Disparities", desc:"", href:"briefs/01_task.html", icon:"GOVuk"},
           { title:"U.S. Food & Drug Administration", desc:"", href:"briefs/02_task.html", icon:"FDA"},
-          { title:"", desc:"", href:"briefs/03_task.html" },
           { title:"Department for Levelling Up, Housing & Communities", desc:"", href:"briefs/04_task.html", icon:"GOVuk"},
-          { title:"", desc:"", href:"briefs/05_task.html" },
           { title:"ASDA: Retail Operations and Commercial Analysis", desc:"", href:"briefs/06_task.html", icon:"ASDA"},
-          { title:"Leicester City Football Club", desc:"", href:"briefs/07_task.html", icon:"lcfc"},
-          { title:"", desc:"", href:"briefs/08_task.html" }
+          { title:"Leicester City Football Club", desc:"", href:"briefs/07_task.html", icon:"lcfc"}
+        ]
+      },
+      {
+        section: "Contract",
+        locked: false,
+        password: "briefs",
+        items: [
+          { title:"Contract", desc:"", href:"contract.html", icon:"GOVuk"}
         ]
       }
     ];
