--- a/contract.html
+++ b/contract.html
@@ -303,7 +303,7 @@
             </div>
             <div class="company">
               <div class="name editable" contenteditable="false">CSG Analytx</div>
-              <div class="strap editable" contenteditable="false">Data &amp; Insights | Client Delivery | Training Programme</div>
+              <div class="strap editable" contenteditable="false">Data &amp; Insights | Training Programme</div>
             </div>
           </div>
 
