updates + official task synthesis

--- a/daily/monday.html
+++ b/daily/monday.html
@@ -75,7 +75,7 @@
 <body>
   <header>
     <div class="wrap">
-      <h1>Week 1 Monday: Orientation, Mindset & First Contact with Data</h1>
+      <h1>Orientation, Mindset & First Contact with Data</h1>
       <div class="subtitle">
         Goal: become comfortable in RStudio, set up good project structure, and interrogate a real dataset with genuine questions (not just code that we don't understand yet).
       </div>
