--- a/daily/tuesday.html
+++ b/daily/tuesday.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Week 1 Tuesday: Data wrangling & Cleaning</title>
+  <title>Data wrangling & Cleaning</title>
   <style>
     :root{
       --max: 980px;
